--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "dev": "node webpack/development.js",
     "build": "yarn lint && node webpack/build.js",
     "lint": "tslint -c tslint.json 'src/**/*.ts?(x)'",
-    "check-format": "prettier --list-different 'src/**/*.ts?(x)'"
+    "check-format": "prettier --list-different 'src/**/*.ts?(x)'",
+    "test": "jest"
   },
   "devDependencies": {
+    "@types/jest": "^23.3.1",
     "autoprefixer": "^8.4.1",
     "awesome-typescript-loader": "^5.0.0",
     "css-loader": "^0.28.11",
@@ -26,6 +28,7 @@
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "html-webpack-plugin": "^3.2.0",
     "husky": "^1.0.0-rc.2",
+    "jest": "^23.4.2",
     "node-sass": "^4.9.0",
     "postcss-loader": "^2.1.5",
     "preact-compat": "^3.18.0",
@@ -34,6 +37,7 @@
     "shelljs": "^0.8.1",
     "style-loader": "^0.21.0",
     "svg-sprite-html-webpack": "^2.1.0",
+    "ts-jest": "^23.0.1",
     "tslint": "^5.10.0",
     "tslint-config-airbnb": "^5.8.0",
     "typescript": "^2.9.2",
@@ -48,6 +52,20 @@
     "preact-redux": "^2.0.3",
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0"
+  },
+  "jest": {
+    "verbose": true,
+    "testURL": "http://localhost/",
+    "transform": {
+      "^.+\\.ts$": "ts-jest"
+    },
+    "testRegex": "((\\.|/)(test))\\.(ts)$",
+    "moduleFileExtensions": [
+      "ts",
+      "js",
+      "json",
+      "node"
+    ]
   },
   "husky": {
     "hooks": {
