Create function to filter operations

--- a/package.json
+++ b/package.json
@@ -60,6 +60,9 @@
       "^.+\\.ts$": "ts-jest"
     },
     "testRegex": "((\\.|/)(test))\\.(ts)$",
+    "moduleNameMapper": {
+      "src(.*)$": "<rootDir>/src/$1"
+    },
     "moduleFileExtensions": [
       "ts",
       "js",
