--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "test": "jest"
   },
   "devDependencies": {
+    "@types/classnames": "^2.2.6",
     "@types/jest": "^23.3.1",
     "autoprefixer": "^8.4.1",
     "awesome-typescript-loader": "^5.0.0",
@@ -48,6 +49,7 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "classnames": "^2.2.6",
     "preact": "^8.2.9",
     "preact-redux": "^2.0.3",
     "redux": "^3.7.2",
