--- a/package.json
+++ b/package.json
@@ -53,7 +53,8 @@
     "preact": "^8.2.9",
     "preact-redux": "^2.0.3",
     "redux": "^3.7.2",
-    "redux-thunk": "^2.2.0"
+    "redux-thunk": "^2.2.0",
+    "reselect": "^3.0.1"
   },
   "jest": {
     "verbose": true,
