--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,7 @@
     "module": "commonjs",
     "target": "es5",
     "jsx": "react",
-    "jsxFactory": "h",
+    "jsxFactory": "createElement",
     "lib": [
       "dom",
       "es5",
