Add animations between pages

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@types/react-dom": "^16.0.6",
     "@types/react-redux": "^6.0.5",
     "@types/react-router-dom": "^4.3.0",
+    "@types/react-transition-group": "^2.0.12",
     "@types/validator": "^9.4.1",
     "autoprefixer": "^8.4.1",
     "awesome-typescript-loader": "^5.0.0",
@@ -58,6 +59,7 @@
     "react-dom": "^16.4.1",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
+    "react-transition-group": "^2.4.0",
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0",
     "reselect": "^3.0.1",
