--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-boilerplate",
+  "name": "swagger-dark-ui",
   "version": "1.0.0",
   "main": "index.js",
   "author": "Frederic Godin",
