--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "devDependencies": {
     "@types/classnames": "^2.2.6",
     "@types/jest": "^23.3.1",
+    "@types/memoize-one": "^3.1.1",
     "@types/prismjs": "^1.9.0",
     "@types/react": "^16.4.10",
     "@types/react-dom": "^16.0.7",
@@ -56,6 +57,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "classnames": "^2.2.6",
+    "memoize-one": "^4.0.0",
     "prismjs": "^1.15.0",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
