--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "tslint-config-airbnb": "^5.9.2",
     "typescript": "^3.0.1",
     "webpack": "^4.16.5",
+    "webpack-bundle-analyzer": "^2.13.1",
     "webpack-dev-server": "^3.1.5",
     "webpack-merge": "^4.1.4",
     "webpackbar": "^2.6.2"
